k8s/imDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: im-interface-deployment
  namespace: im-interface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: im-interface
  template:
    metadata:
      labels:
        app: im-interface
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
        - name: im-interface
          image: harbor.vgregion.se/senslab/im-interface:latest
          command:
            - sh
            - -c
            - |
              [...]
          ports:
            - containerPort: 9000
            - containerPort: 80
