k8s/mysqlDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db-deployment
  namespace: im-interface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
        - name: mysql-db
          image: harbor.vgregion.se/senslab/mysql:8.0
          ports:
            - containerPort: 3306
