k8s/imService.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-interface-service
  namespace: im-interface
spec:
  selector:
    app: im-interface
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: LoadBalancer
