k8s/mysqlService.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: im-interface
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
