k8s/imIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: im-interface-ingress
  namespace: im-interface
  annotations:
    dns-managed-by/infoblox-dns-webhook: "true"
spec:
  rules:
    - host: senslab-test.k8s.vgregion.se
      http:
        paths:
          - path: /im-interface
            pathType: Prefix
            backend:
              service:
                name: im-interface-service
                port:
                  number: 80
